--- a/translations/game+intl-icu.de.xlf
+++ b/translations/game+intl-icu.de.xlf
@@ -16424,5 +16424,11 @@
         <target><![CDATA[Der entsetzliche Angriff letzte Nacht kostete das Leben von {cadavers} Menschen. Circa <strong>{attack} Zombies</strong>! Die Gewalt, die bei diesem jüngsten Angriff zu beobachten war, lässt uns das Schlimmste erwarten...]]></target>
       </segment>
     </unit>
+    <unit id="Mv5rYXb">
+      <segment>
+        <source>Der Empfänger scheint &lt;strong&gt;keinen freien Platz mehr in seiner Truhe&lt;/strong&gt; zu haben! Er kann darum den oder die mitgesendeten Gegenstände nicht empfangen. Sende ihm weniger Gegenstände oder bitte ihn etwas Platz in seiner Truhe zu machen.&lt;hr/&gt;Deine Nachricht &lt;strong&gt;wurde nicht gesendet&lt;/strong&gt;.</source>
+        <target><![CDATA[Der Empfänger scheint <strong>keinen freien Platz mehr in seiner Truhe</strong> zu haben! Er kann darum den oder die mitgesendeten Gegenstände nicht empfangen. Sende ihm weniger Gegenstände oder bitte ihn etwas Platz in seiner Truhe zu machen.<hr/>Deine Nachricht <strong>wurde nicht gesendet</strong>.]]></target>
+      </segment>
+    </unit>
   </file>
 </xliff>
