--- a/translations/game+intl-icu.es.xlf
+++ b/translations/game+intl-icu.es.xlf
@@ -26109,5 +26109,16 @@
         <target><![CDATA[Der entsetzliche Angriff letzte Nacht kostete das Leben von {cadavers} Menschen. Circa <strong>{attack} Zombies</strong>! Die Gewalt, die bei diesem jüngsten Angriff zu beobachten war, lässt uns das Schlimmste erwarten...]]></target>
       </segment>
     </unit>
+    <unit id="Mv5rYXb">
+      <notes>
+        <note category="german">Der Empfänger scheint &lt;strong&gt;keinen freien Platz mehr in seiner Truhe&lt;/strong&gt; zu haben! Er kann darum den oder die mitgesendeten Gegenstände nicht empfangen. Sende ihm weniger Gegenstände oder bitte ihn etwas Platz in seiner Truhe zu machen.&lt;hr/&gt;Deine Nachricht &lt;strong&gt;wurde nicht gesendet&lt;/strong&gt;.</note>
+        <note category="from">twig:///templates/scripts/errors/inventory.txt.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Der Empfänger scheint &lt;strong&gt;keinen freien Platz mehr in seiner Truhe&lt;/strong&gt; zu haben! Er kann darum den oder die mitgesendeten Gegenstände nicht empfangen. Sende ihm weniger Gegenstände oder bitte ihn etwas Platz in seiner Truhe zu machen.&lt;hr/&gt;Deine Nachricht &lt;strong&gt;wurde nicht gesendet&lt;/strong&gt;.</source>
+        <target><![CDATA[¡El destinatario parece <strong>no tener espacio disponible en su baúl</strong>! No podrá recibir los objetos adjuntos. Intenta enviarle menos objetos a la vez, o pídele liberar algo de espacio.<hr/>Tu mensaje <strong>no ha sido enviado</strong>.]]></target>
+      </segment>
+    </unit>
   </file>
 </xliff>
